# prisoner-s-dilemma-with-llm

./: .gitignore  README.md  pyproject.toml
notes/: gpt4_vs_specific_condition.ipynb  llam2_vs_llama2.ipynb  llam2_vs_specific_condition.ipynb
