[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["yoshino <44nocycle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.7"
llama-cpp-python = "^0.2.11"
python-dotenv = "^1.0.0"
openai = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
